# kyoushi-simulation

./: .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  mypy.ini  pyproject.toml  sitemap.xml  tox.ini
contributing/: index.html
docs/: cli.md
docs/examples/: decorated_traveler.md  traveler.md
docs/reference/: config.md  errors.md  logging.md  model.md  sm.md  states.md  transitions.md  util.md
docs/stylesheets/: extra.css
docs/usage/: configuration.md  example.md  getting_started.md  logging.md
examples/decorated_traveler/: config.yml  index.html  invalid_config.yml  sm.yml  traveler.py
examples/traveler/: index.html  invalid_config.yml  traveler.py  traveler.smcat
license/: index.html
reference/config/: index.html
reference/errors/: index.html
reference/logging/: index.html
reference/model/: index.html
reference/sm/: index.html
reference/states/: index.html
reference/transitions/: index.html
reference/util/: index.html
search/: search_index.json
src/cr_kyoushi/simulation/: __init__.py  __main__.py  cli.py  config.py  errors.py  logging.py  model.py  plugins.py  sm.py  states.py  transitions.py  util.py
src/cr_kyoushi/simulation/core/: config.py  errors.py  model.py  plugins.py  sm.py  states.py  transitions.py  util.py
tests/: test_cr_kyoushi_simulation.py
tests/cli/: conftest.py  plugin_file_check.py  test_basics.py  test_config_loading.py  test_config_loading.yml  test_enum_choice.py  test_plugins.py  test_sm_commands.py
tests/cli/files/: complex-sm.yml  config.yml  config_seed.yml  invalid_plugin_exclude_names.yml  invalid_plugin_include_names.yml  invalid_sm.yml  simple-sm.yml
tests/config/: test_seed.py
tests/core/model/: test_activity_period.py  test_time_period.py  test_weekday.py
tests/core/sm/: conftest.py  test_statemachine.py
tests/core/states/: test_probabilisitc_state.py
tests/fixtures/: transitions.py
tests/logging/: test_logging_setup.py
tests/model/: test_activity_period.py  test_approximate_float.py  test_log_handler.py  test_log_level.py  test_time_period.py  test_weekday.py  test_work_schedule.py
tests/sm/: conftest.py  test_limited_active_sm.py  test_probabilisitc_state.py  test_start_end_sm.py  test_statemachine.py  test_work_hours_sm.py
tests/states/: test_basic_states.py  test_probabilisitc_state.py
tests/transitions/: test_basics.py  test_delayed_transition.py
tests/util/: test_now.py  test_propability_fns.py  test_skip_on_interrupt.py  test_sleep.py  test_unique_element.py
usage/cli/: index.html
usage/configuration/: index.html
usage/getting_started/: index.html
usage/logging/: index.html
