[tool.poetry]
name = "cr-kyoushi-simulation"
version = "0.1.0"
description = ""
authors = ["Maximilian Frank <maximilian.frank@ait.ac.at>"]
license = "MIT"
readme = 'README.md'  # Markdown files are supported
repository = "https://git-service.ait.ac.at/sct-cyberrange/tools/kyoushi/simulation"
homepage = "https://git-service.ait.ac.at/sct-cyberrange/tools/kyoushi/simulation"
packages = [
  { include = "cr_kyoushi", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.6.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
pre-commit = "^2.9.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
