[tool.poetry]
name = "cr-kyoushi-simulation"
version = "0.1.0"
description = ""
authors = ["Maximilian Frank <maximilian.frank@ait.ac.at>"]
license = "MIT"
readme = 'README.md'  # Markdown files are supported
repository = "https://git-service.ait.ac.at/sct-cyberrange/tools/kyoushi/simulation"
homepage = "https://git-service.ait.ac.at/sct-cyberrange/tools/kyoushi/simulation"
packages = [
  { include = "cr_kyoushi", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7.0"
click = "^7.1.2"
pydantic = "^1.7.2"
importlib-metadata = {version = "^3.1.0", python = "<=3.7"}
"ruamel.yaml" = "^0.16.12"
importlib = "^1.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
pre-commit = "^2.9.0"
black = "^20.8b1"
mypy = "^0.790"
pytest-cov = "^2.10.1"
pytest-sugar = "^0.9.4"
pytest-mock = "^3.3.1"
isort = "^5.6.4"
pylint = "^2.6.0"
safety = "^1.9.0"
autoflake = "^1.4"

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["src", "tests"]
skip_glob = ["*/setup.py"]
filter_files = true
known_first_party = "cr_kyoushi"


[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.poetry.scripts]
cr-kyoushi-sim = "cr_kyoushi.simulation.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
